--- a/Erronka/docker-compose.yml
+++ b/Erronka/docker-compose.yml
@@ -10,6 +10,20 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./dump-IG_DB-202511141024.sql:/docker-entrypoint-initdb.d/dump.sql
+    command: --init-file /docker-entrypoint-initdb.d/dump.sql
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8080:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
 
 volumes:
   mysql_data:
+  pgadmin_data:
